# AXIOM

./: .gitignore  README.md
AXIOM/: .gitignore  README.md  demo_features.py  pyproject.toml  requirements.txt
AXIOM/DOCS/: ARCHITECTURE.md  CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  PUBSUB.md  QUICK_REFERENCE.md  SRS.md  SYSTEM_DIAGRAMS.md  TODO.md
AXIOM/configs/: default.json  eventbus.schema.json  intents.json  production.json
AXIOM/src/: __init__.py  another_tester.py  config.py  core.py  main.py
AXIOM/src/AudioFlow/: coqui_ttts_tester.py  tts_engine.py
AXIOM/src/AudioFlow/documentation/: AudioFlow.md
AXIOM/src/AxIom/: __init__.py  config.py  main.py
AXIOM/src/AxIom/AudioFlow/: __init__.py  coqui_ttts_tester.py  mic_input.py  tts_engine.py
AXIOM/src/AxIom/AudioFlow/documentation/: mic-handler.md  tts-engine.md
AXIOM/src/AxIom/CmdCraft/: __init__.py  cmd_handler.py  function_handler.py  prompt_handler.py
AXIOM/src/AxIom/CmdCraft/documentation/: CmdCraft.md  Command-Handler.md  Function-Handler.md
AXIOM/src/AxIom/CmdCraft/helpers/: scheduler.py
AXIOM/src/CmdCraft/: cmd_handler.py  function_handler.py  prompt_handler.py  scheduler.py
AXIOM/src/axiom/: __init__.py  config.py  fuckaround.py  main.py
AXIOM/src/axiom/bus/: __init__.py  event_bus.py  events.py  exceptions.py  handlers.py
AXIOM/src/axiom/console/: __init__.py  cli.py  repl.py
AXIOM/src/axiom/policy/: __init__.py  engine.py  exceptions.py  input_validation.py  policies.py  validators.py
AXIOM/src/axiom/state/: __init__.py  exceptions.py  models.py  queries.py  store.py
AXIOM/src/axiom/state/migrations/: base.py  v001_initial.py  (+1 more)
AXIOM/src/axiom/utils/: errors.py  health.py  logging.py  shutdown.py
AXIOM/src/axiom/va/: __init__.py  dm.py  pipeline.py
AXIom/: README.md  (+2 more)
(+51 files in other folders)
